Enable mouse behaviour.conf

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -11,3 +11,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # Change board name
 CONFIG_ZMK_KEYBOARD_NAME="Corne Token"
+
+# Enable mouse behaviour
+CONFIG_ZMK_POINTING=y
